# simple-deep-agent

./: .env.example  .gitignore  DESIGN.md  README.md  langgraph.json  pyproject.toml  web_search.ipynb
examples/: report.md  run_agent.py
src/: models.py  state.py  utils.py
src/graphs/: main_graph.py  orchestrator_graph.py  research_graph.py
src/prompts/: clarify_prompt.py  deepagent_prompt.py  research_agent_prompt.py
src/tools/: research_agent_tool.py  todo_list.py  web_search.py
