[project]
name = "lc-deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "langgraph-cli[inmem]>=0.4.12",
    "pydantic>=2.12.5",
    "ratelimit>=2.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
